// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Relic integration Should call New Relic Event API for $type toggle 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`New Relic integration Should call New Relic Event API for FEATURE_ARCHIVED toggle with project info 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`New Relic integration Should call New Relic Event API for FEATURE_ARCHIVED with project info 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`New Relic integration Should call New Relic Event API for custom body template 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;

exports[`New Relic integration Should call New Relic Event API for customHeaders in headers when calling service 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
  "MY_CUSTOM_HEADER": "MY_CUSTOM_VALUE",
}
`;

exports[`New Relic integration Should call New Relic Event API for toggled environment 1`] = `
{
  "Api-Key": "fakeLicenseKey",
  "Content-Encoding": "gzip",
  "Content-Type": "application/json",
}
`;
